# python-template

./: .copilot-instructions.md  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: CHANGELOG.md  test-instructions.md  version-management-system.md
docs/copilot-changes/: 2025-06-08-convert-tests-to-function-based.md  2025-06-08-migrate-click-to-typer.md  2025-06-08-project-initialization.md  2025-06-08-remove-typos-dependency.md  2025-06-08-version-1.1.0-release.md
python_template/: __init__.py  __main__.py  main.py
scripts/: check_version.py
tests/: test_main.py
